--- a/0/0.ipynb
+++ b/0/0.ipynb
@@ -1217,9 +1217,9 @@
    "source": [
     "**ANSWER**:\n",
     "\n",
-    "1. We used CQT to transform notes to frequency signals so that the data becomes easier to analyze.\n",
-    "2. Visually, they look similar. There are noises and a majority of notes are shifted.\n",
-    "3. Tune the parameters passed to `cqt_to_piano_roll` (`min_midi`, `max_midi`, `threshold`)."
+    "1. We used CQT to transform notes to frequency signals so that the data would become easier to analyze.\n",
+    "2. Visually, they look similar. There are some noises and a majority of notes are shifted.\n",
+    "3. Tune the parameters (`min_midi`, `max_midi`, and `threshold`) passed to `cqt_to_piano_roll`."
    ]
   }
  ],
